--- a/code-connect/src/Components/CustomEdge/CustomEdge.css
+++ b/code-connect/src/Components/CustomEdge/CustomEdge.css
@@ -1,13 +1,9 @@
 /* src/Components/CustomEdge/CustomEdge.css */
 
-.re-path {
-  transition: stroke 0act-flow__edge.3s ease, stroke-width 0.3s ease;
-  z-index: 1000;
-  stroke: #94a3b8;
-  stroke-width: 2.5;
-  stroke-linecap: round;
-}
+.react-flow__edge-path {
+  transition: stroke 0.3s ease, stroke-width 0.3s ease;
 
+}
 .react-flow__edge-path:hover {
   stroke: #0ea5e9;
   stroke-width: 3.5;
